--- a/src/assets/styles/projet.css
+++ b/src/assets/styles/projet.css
@@ -232,6 +232,12 @@
     margin-bottom: 0.5rem;
 }
 
+.contenu_projet .projet .voir_projet{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .decouvrir{
     margin-top: 3rem;
 }
