--- a/src/assets/styles/header_footer.css
+++ b/src/assets/styles/header_footer.css
@@ -4,7 +4,7 @@
     font-display: swap;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Dosis&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alex+Brush&Dosis&display=swap');
 
 /*---------------
 Normalize
