--- a/src/assets/styles/projet.css
+++ b/src/assets/styles/projet.css
@@ -106,6 +106,8 @@
 .list_logi{
     width: calc(100% / 3);
     padding: 1rem;
+    display: flex;
+    flex-direction: column;
 }
 
 .list_logi img{
